--- a/_posts/2024-09-17-AZ-104-Exam-Prep.md
+++ b/_posts/2024-09-17-AZ-104-Exam-Prep.md
@@ -15,6 +15,8 @@ title: AZ-104 Exam prep resources
 [Labs and Demos by Microsoft Learn](https://microsoftlearning.github.io/AZ-104-MicrosoftAzureAdministrator/) and [GitHub repo](https://github.com/MicrosoftLearning/AZ-104-MicrosoftAzureAdministrator) free, hands-on  
 [Practice Assessment for Exam AZ-104: Microsoft Azure Administrator by Microsoft Learn](https://learn.microsoft.com/en-us/credentials/certifications/azure-administrator/practice/assessment?assessment-type=practice&assessmentId=21&practice-assessment-type=certification) free, practice tests   
 
+[Azure Resource Manager QuickStart Templates](https://github.com/Azure/azure-quickstart-templates/tree/master) free, hands-on, documentation, examples  
+
 
 [Practice Tests by whizlabs](https://www.whizlabs.com/microsoft-azure-certification-az-104/) paid, practice tests, pretty close to the real exam  
 [AZ-104 Microsoft Azure Administrator Exam Prep by Scott Duffy](https://www.udemy.com/course/70533-azure)  paid, udemy  
