add. last_modified_at

--- a/_posts/2024-09-17-AZ-104-Exam-Prep.md
+++ b/_posts/2024-09-17-AZ-104-Exam-Prep.md
@@ -1,6 +1,7 @@
 ---
 layout: post
 title: AZ-104 Exam prep resources
+last_modified_at: 2024-09-22
 ---
 
 ## Here is a list of useful resources to help you pass the AZ-104 Microsoft Azure Administrator exam  
