--- a/_posts/2025-05-05-AZ-204-Exam-Prep.md
+++ b/_posts/2025-05-05-AZ-204-Exam-Prep.md
@@ -4,7 +4,7 @@ title: AZ-204 Exam prep resources
 last_modified_at: 2025-05-05
 ---
 
-## Here is a list of useful resources to help you pass the AZ-204 Microsoft Azure Administrator exam  
+## Here is a list of useful resources to help you pass the AZ-204 Developing Solutions for Microsoft Azure exam  
 
 [John Savill](https://www.youtube.com/@NTFAQGuy) has some really good videos about Azure on YouTube  
 [Azure Developer Associate (AZ-204) — Full Course Pass the Exam! by Andrew Brown](https://www.youtube.com/watch?v=jZx8PMQjobk) free, youtube, full course. 
@@ -14,7 +14,8 @@ last_modified_at: 2025-05-05
  by Microsoft Learn](https://learn.microsoft.com/en-us/training/courses/az-204t00) free, official, full course  
 
 [Labs and Demos by Microsoft Learn](https://microsoftlearning.github.io/AZ-204-DevelopingSolutionsforMicrosoftAzure/) and [GitHub repo](https://github.com/MicrosoftLearning/AZ-204-DevelopingSolutionsforMicrosoftAzure) free, hands-on  
-[Practice Assessment for Exam AZ-204: Microsoft Azure Administrator by Microsoft Learn](https://learn.microsoft.com/en-us/credentials/certifications/azure-administrator/practice/assessment?assessment-type=practice&assessmentId=21&practice-assessment-type=certification) free, practice tests   
+[Practice Assessment for Exam AZ-204: Developing Solutions for Microsoft Azure
+ by Microsoft Learn](https://learn.microsoft.com/en-us/credentials/certifications/azure-developer/practice/assessment?assessment-type=practice&assessmentId=35&practice-assessment-type=certification) free, practice tests   
 
 
 [Practice Tests by whizlabs](https://www.whizlabs.com/microsoft-azure-certification-az-204/) paid, practice tests, pretty close to the real exam  
